--- a/Reports/Spark/ExtentSpark.html
+++ b/Reports/Spark/ExtentSpark.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">MSIL MICRM Automation Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Nov 27, 2023 11:30:28 am</span></a>
+<a href="#"><span class="badge badge-primary">Nov 27, 2023 02:48:23 pm</span></a>
 </li>
 </ul>
 </div>
@@ -71,13 +71,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Nov 27, 2023 11:30:28 am</h3>
+<h3>Nov 27, 2023 02:48:23 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Nov 27, 2023 11:34:15 am</h3>
+<h3>Nov 27, 2023 02:50:18 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -148,10 +148,10 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='92%'><b>37</b> steps passed</small></div>
+<div><small data-tooltip='77%'><b>17</b> steps passed</small></div>
 <div>
-<small data-tooltip='2%'><b>1</b> steps failed,
-<b>2</b> skipped, <b data-tooltip='%'>0</b> others
+<small data-tooltip='4%'><b>1</b> steps failed,
+<b>4</b> skipped, <b data-tooltip='%'>0</b> others
 </small>
 </div>
 </div>
@@ -167,7 +167,7 @@
 </div></div>
 <script>
 var timeline = {
-"Addtional Details Tab of Add Invoice":226.031
+"Add Invoice - Vehicle Details Tab":114.078
 };
 </script>
 <div class="row">
@@ -177,7 +177,15 @@ var timeline = {
 <div class="card-body pb-0 pt-0"><table class="table table-sm table-bordered">
 <thead><tr class="bg-gray"><th>Name</th><th>Passed</th><th>Failed</th><th>Skipped</th><th>Others</th><th>Passed %</th></tr></thead><tbody>
 <tr>
-<td>@mssf</td>
+<td>@ccp</td>
+<td>0</td>
+<td>1</td>
+<td>0</td>
+<td>0</td>
+<td>0%</td>
+</tr>
+<tr>
+<td>@VehicleDetails</td>
 <td>0</td>
 <td>1</td>
 <td>0</td>
@@ -230,10 +238,10 @@ warningChild: 0,
 skipChild: 0,
 infoChild: 0,
 grandChildCount: 5,
-passGrandChild: 37,
+passGrandChild: 17,
 failGrandChild: 1,
 warningGrandChild: 0,
-skipGrandChild: 2,
+skipGrandChild: 4,
 infoGrandChild: 0,
 eventsCount: 5,
 };
@@ -255,7 +263,7 @@ eventsCount: 5,
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tag"></i></a>
 <ul id="tag-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a class="dropdown-item" href="#">@mssf</a>
+<a class="dropdown-item" href="#">@ccp</a><a class="dropdown-item" href="#">@VehicleDetails</a>
 </ul>
 </li>
 </ul>
@@ -266,9 +274,9 @@ eventsCount: 5,
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">Addtional Details Tab of Add Invoice</p>
+            <p class="name">Add Invoice - Vehicle Details Tab</p>
             <p class="text-sm">
-              <span>11:30:29 am</span> / <span>00:03:46:031</span>
+              <span>2:48:23 pm</span> / <span>00:01:54:078</span>
               <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
@@ -276,10 +284,10 @@ eventsCount: 5,
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-fail">Addtional Details Tab of Add Invoice</h5>
-<span class='badge badge-success'>11.27.2023 11:30:29 am</span>
-<span class='badge badge-danger'>11.27.2023 11:34:15 am</span>
-<span class='badge badge-default'>00:03:46:031</span>
+<h5 class="test-status text-fail">Add Invoice - Vehicle Details Tab</h5>
+<span class='badge badge-success'>11.27.2023 2:48:23 pm</span>
+<span class='badge badge-danger'>11.27.2023 2:50:18 pm</span>
+<span class='badge badge-default'>00:01:54:078</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -291,7 +299,7 @@ eventsCount: 5,
   <div class="card">
     <div class="card-header" role="tab">
       <div class="card-title">
-        <div class="node" id="2"><span class="badge log fail-bg mr-2">Fail</span>Validate the MSSF Other offer</div>
+        <div class="node" id="2"><span class="badge log fail-bg mr-2">Fail</span>Validate CCP Sale with Extendend Warranty with gold</div>
           <div class="status-avatar float-right mr-4">
             <i class="fa fa-paperclip"></i>
           </div>
@@ -301,7 +309,7 @@ eventsCount: 5,
             <div class="card-body l1">
               <div class="card-header">
                 <div class="card-title outline-child">
-                  <div class="node" id="3"><span class="badge log fail-bg mr-2">Fail</span>Validate the MSSF Other offer</div>
+                  <div class="node" id="3"><span class="badge log fail-bg mr-2">Fail</span>Validate CCP Sale with Extendend Warranty with gold</div>
                     <div class="status-avatar float-right">
                       <i class="fa fa-paperclip"></i>
                     </div>
@@ -388,118 +396,18 @@ eventsCount: 5,
       <div>
       </div>
                   </div>
-                  <div class="step pass-bg">
-                    <span>And user selects Owners Manual Preference for scenario 4</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And user selects Interested in Loyalty Card, Type of card, Reason for scenario 4</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And user clicks on Preferred SRV Dealer popup</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And user selects state for scenario 4</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And user selects city for scenario 4</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And User clicks on "SEARCH" button on popup</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And selects the dealer for scenario 4 from searched results</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And User clicks on "OK" button</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
+                  <div class="step fail-bg">
                     <span>And user selects Extended Warranty for scenario 4</span>
       <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And User clicks on "NEXT" button</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>When User selects payment type as "Cash"</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And User selects tax rate for scenario 4</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And User selects TDS Amount for scenario 4</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And User selects the MSGA finance flag</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And user selects MSGA Financier Name and value from scenario 4</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And User clicks on "NEXT" button</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And User click on other offer dropdown</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And User selects only the "MSSF Offer" from other offers</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>Then Verify "MSSF OFFER" pop up button is displayed</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And Click on "MSSF OFFER" tab on Additional Details</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step fail-bg">
-                    <span>And Choose Mssf offer from popup</span>
-      <div>
-        <textarea disabled class="code-block">org.openqa.selenium.NoSuchElementException: no such element: Unable to locate element: {"method":"xpath","selector":"//div[contains(@class,'row-data') and not(contains(@class,'heading'))]"}
+        <textarea disabled class="code-block">org.openqa.selenium.NoSuchElementException: no such element: Unable to locate element: {"method":"xpath","selector":"//span[contains(text(),'Extended Warranty Gold')]"}
   (Session info: chrome=119.0.6045.160)
 For documentation on this error, please visit: https://selenium.dev/exceptions/#no_such_element
 Build info: version: '4.8.1', revision: '8ebccac989'
 System info: os.name: 'Windows 11', os.arch: 'amd64', os.version: '10.0', java.version: '17.0.7'
 Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [70717ed4e9a34eae7ffccad525322a20, findElement {using=xpath, value=//div[contains(@class,'row-data') and not(contains(@class,'heading'))]}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 119.0.6045.160, chrome: {chromedriverVersion: 119.0.6045.105 (38c72552c5e..., userDataDir: C:\WINDOWS\SystemTemp\scope...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:55536}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: WINDOWS, proxy: Proxy(), se:cdp: ws://localhost:55536/devtoo..., se:cdpVersion: 119.0.6045.160, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Session ID: 70717ed4e9a34eae7ffccad525322a20
+Command: [c9a82b78e8ba0b865c0c9cbb96767cd4, findElement {using=xpath, value=//span[contains(text(),'Extended Warranty Gold')]}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 119.0.6045.160, chrome: {chromedriverVersion: 119.0.6045.105 (38c72552c5e..., userDataDir: C:\WINDOWS\SystemTemp\scope...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:52479}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: WINDOWS, proxy: Proxy(), se:cdp: ws://localhost:52479/devtoo..., se:cdpVersion: 119.0.6045.160, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: c9a82b78e8ba0b865c0c9cbb96767cd4
 	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
 	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:77)
 	at java.base/jdk.internal.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)
@@ -517,26 +425,36 @@ Session ID: 70717ed4e9a34eae7ffccad525322a20
 	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:352)
 	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:344)
 	at com.dms.utils.PageUtil.findBy(PageUtil.java:16)
-	at com.dms.pageobjects.AddInvoice_AdditionalDetailsPOM.firstOptionFromPopup(AddInvoice_AdditionalDetailsPOM.java:193)
-	at com.dms.stepdefinitions.AdditionalDetailsStepDef.choose_Mssf_offfer_from_popup(AdditionalDetailsStepDef.java:427)
-	at ✽.Choose Mssf offer from popup(file:///C:/Users/tanugupta02/git/dms_Invoice_UIAutomation/src/test/java/com/dms/featurefiles/AdditionalDetails.feature:389)
+	at com.dms.pageobjects.AddInvoice_VehicleDetailsPOM.chooseExtendedWarranty(AddInvoice_VehicleDetailsPOM.java:145)
+	at com.dms.stepdefinitions.VehicleDetailTabStepDef.user_selects_extended_warranty_as(VehicleDetailTabStepDef.java:179)
+	at ✽.user selects Extended Warranty for scenario 4(file:///C:/Users/tanugupta02/git/dms_Invoice_UIAutomation/src/test/java/com/dms/featurefiles/VehicleDetails.feature:246)
 </textarea>
       
       </div>
                   </div>
                   <div class="step skip-bg">
-                    <span>And User clicks on "OK" button on popup</span>
+                    <span>And User clicks on CCP Sale popup</span>
       <div>Step skipped
       </div>
                   </div>
                   <div class="step skip-bg">
-                    <span>Then Verify required field error for "MSSF OFFER" is displayed</span>
+                    <span>And Verify if benefit is already selected or select benefit from 4</span>
+      <div>Step skipped
+      </div>
+                  </div>
+                  <div class="step skip-bg">
+                    <span>And User clicks on "OK" button</span>
+      <div>Step skipped
+      </div>
+                  </div>
+                  <div class="step skip-bg">
+                    <span>Then Verify if ccp benefit is selected</span>
       <div>Step skipped
       </div>
                   </div>
                   <div class="step pass-bg">
                     <span>com.dms.apphooks.ApplicationHooks.tearDown(io.cucumber.java.Scenario)</span>
-      <div>Validate_the_MSSF_Other_offer
+      <div>Validate_CCP_Sale_with_Extendend_Warranty_with_gold
           <div class="row mb-3"><div class="col-md-3">
 <img data-featherlight='../FailedScreenShots/embedded1.png' src="../FailedScreenShots/embedded1.png">
     
@@ -565,7 +483,7 @@ Session ID: 70717ed4e9a34eae7ffccad525322a20
 <div class="test-list">
 <div class="test-list-tools">
 <ul class="tools pull-left"><li><a href=""><span class="font-size-14">Category</span></a></li></ul>
-<ul class="tools text-right"><li><a href="#"><span class="badge badge-primary">1</span></a></li></ul>
+<ul class="tools text-right"><li><a href="#"><span class="badge badge-primary">2</span></a></li></ul>
 </div>
 <div class="test-list-wrapper scrollable">
 <ul class="test-list-item">
@@ -574,12 +492,12 @@ Session ID: 70717ed4e9a34eae7ffccad525322a20
 <span class="meta">
 <span class='badge log badge-danger'>1</span>
 </span>
-<p class="name">@mssf</p>
+<p class="name">@ccp</p>
 <p class="duration text-sm">1 tests</p>
 </div>
 <div class="test-contents d-none">
 <div class="info">
-<h4>@mssf</h4>
+<h4>@ccp</h4>
 <span status="fail" class='badge log badge-danger'>1 failed</span>
 </div>
 <table class='table table-sm mt-4'>
@@ -593,11 +511,47 @@ Session ID: 70717ed4e9a34eae7ffccad525322a20
 <tbody>
 <tr class="tag-test-status" status="fail">
 <td><span class="badge log fail-bg">Fail</span></td>
-<td>11:30:29 am</td>
+<td>14:48:23 pm</td>
 <td>
-<a href="#" class="linked" test-id='1' id='3'>Validate the MSSF Other offer</a>
+<a href="#" class="linked" test-id='1' id='3'>Validate CCP Sale with Extendend Warranty with gold</a>
 <div class="">
-<span class="badge badge-default">Addtional Details Tab of Add Invoice.Validate the MSSF Other offer</span>
+<span class="badge badge-default">Add Invoice - Vehicle Details Tab.Validate CCP Sale with Extendend Warranty with gold</span>
+</div>
+</td>
+</tr>
+</tbody>
+</table>
+</div>
+</li>
+<li class="test-item">
+<div class="test-detail">
+<span class="meta">
+<span class='badge log badge-danger'>1</span>
+</span>
+<p class="name">@VehicleDetails</p>
+<p class="duration text-sm">1 tests</p>
+</div>
+<div class="test-contents d-none">
+<div class="info">
+<h4>@VehicleDetails</h4>
+<span status="fail" class='badge log badge-danger'>1 failed</span>
+</div>
+<table class='table table-sm mt-4'>
+<thead>
+<tr>
+<th class="status-col">Status</th>
+<th class="timestamp-col">Timestamp</th>
+<th>TestName</th>
+</tr>
+</thead>
+<tbody>
+<tr class="tag-test-status" status="fail">
+<td><span class="badge log fail-bg">Fail</span></td>
+<td>14:48:23 pm</td>
+<td>
+<a href="#" class="linked" test-id='1' id='3'>Validate CCP Sale with Extendend Warranty with gold</a>
+<div class="">
+<span class="badge badge-default">Add Invoice - Vehicle Details Tab.Validate CCP Sale with Extendend Warranty with gold</span>
 </div>
 </td>
 </tr>
@@ -645,11 +599,11 @@ Session ID: 70717ed4e9a34eae7ffccad525322a20
 <tbody>
 <tr class="tag-test-status" status="fail">
 <td><span class="badge log fail-bg">Fail</span></td>
-<td>11:33:09 am</td>
+<td>14:49:11 pm</td>
 <td>
-<a href="#" class="linked" test-id='1' id='42'>And Choose Mssf offer from popup</a>
+<a href="#" class="linked" test-id='1' id='22'>And user selects Extended Warranty for scenario 4</a>
 <div class="">
-<span class="badge badge-default">Addtional Details Tab of Add Invoice.Validate the MSSF Other offer.And Choose Mssf offer from popup</span>
+<span class="badge badge-default">Add Invoice - Vehicle Details Tab.Validate CCP Sale with Extendend Warranty with gold.And user selects Extended Warranty for scenario 4</span>
 </div>
 </td>
 </tr>
